Update Edit Website - Gokes.html

--- a/Edit Website - Gokes.html
+++ b/Edit Website - Gokes.html
@@ -43,6 +43,14 @@
     <button onclick="toggleCart()">Close</button>
   </div>
 
+  <!-- Preview Section -->
+  <div class="preview-section" id="previewSection">
+    <h2>Your Cart Preview</h2>
+    <div id="previewItems"></div>
+    <div id="previewTotal">Total: $0</div>
+    <button onclick="toggleCart()">Back to Cart</button>
+  </div>
+
   <!-- Payment Form (hidden initially) -->
   <div class="payment-form" id="paymentForm">
     <h2>Checkout</h2>
